@@ -1,3 +1,9 @@
+2002-06-03  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm/bindings.c (ParseBinding):
+	replaced an error "Illegal mouse button" with a descriptive warning
+	when a button number is greater than NUMBER_OF_MOUSE_BUTTONS
+
 2002-05-31  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (GetContext):
